--- a/eWeLink_Smart_Home/Dockerfile
+++ b/eWeLink_Smart_Home/Dockerfile
@@ -1,8 +1,14 @@
 # ARG BUILD_FROM
 # FROM $BUILD_FROM
 
-FROM node:14-slim
+FROM node:14-alpine
+ENV PYTHONUNBUFFERED=1
+RUN apk add --update --no-cache python3 && ln -sf python3 /usr/bin/python
+RUN python3 -m ensurepip
+RUN pip3 install --no-cache --upgrade pip setuptools
 RUN mkdir -p /workspace/node_modules
+RUN apk add make
+RUN apk add build-base
 COPY ["./dist", "./package.json", "/workspace/"]
 WORKDIR /workspace
 RUN yarn --production
